# rres

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindRaylib.cmake
design/: README.md
examples/: resources.rres  resources.rrp  rres_chunk_info.c  rres_create_file.c  rres_data_loading.c  rres_file_creation.c  rres_load_image.c
examples/resources/: text_data.txt
projects/CMake/: CMakeLists.txt  README.md
projects/VS2019/: rres.sln
projects/VS2019/raylib/: raylib.vcxproj
projects/VS2019/rres/: rres_data_loading.vcxproj
projects/VS2022/: rres.sln
projects/VS2022/rres/: rres_chunk_info.vcxproj  rres_data_loading.vcxproj  rres_load_image.vcxproj
src/: CMakeLists.txt  rres-raylib.h  rres.h
tools/rrem/: .gitignore  CMakeLists.txt  README.md  rrem.c  rrem.rc  rrem.rc.data
tools/rrem/project/CMake/: CMakeLists.txt
tools/rrem/project/CMake/cmake/: FindRaylib.cmake
tools/rrem/project/VS2017/: rrem.sln
tools/rrem/project/VS2017/raylib/: raylib.vcxproj
tools/rrem/project/VS2017/rrem/: rrem.vcxproj
tools/rrem/project/VS2019/: rrem.sln
tools/rrem/project/VS2019/raylib/: raylib.vcxproj
tools/rrem/project/VS2019/rrem/: rrem.vcxproj
tools/rrem/src/: rrem.c  rrem.rc
